# videosearch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
glean/: __init__.py  chunker.py  cli.py  embedder.py  extract.py  ingest.py  search.py  store.py  transcribe.py
tests/: conftest.py  test_chunker.py  test_extract.py  test_ingest.py  test_store.py  test_transcribe.py
videosearch/: __init__.py  chunker.py  cli.py  extract.py  ingest.py  store.py  transcribe.py  trimmer.py
